--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,47 @@
 {
-  "extends": "@tsconfig/react-native/tsconfig.json"
+  "compilerOptions": {
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "isolatedModules": true,
+    "jsx": "react-native",
+    "lib": ["es6"],
+    "moduleResolution": "node",
+    "noEmit": true,
+    /* Enable Strict */
+    "strict": true,
+    /* Override Strict */
+    "alwaysStrict": false,
+    "strictNullChecks": false,
+    "strictBindCallApply": false,
+    "strictFunctionTypes": false,
+    "strictPropertyInitialization": false,
+    "noImplicitAny": true,
+    "noImplicitThis": false,
+    "useUnknownInCatchVariables": true,
+    /* */
+    "target": "es6",
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "~/*": ["src/*"]
+    },
+    "incremental": true,
+    "tsBuildInfoFile": ".buildcache/.tsbuildinfo",
+    "types": ["jest","node"]
+  },
+  "exclude": [
+    "node_modules",
+    "android",
+    "ios",
+    "coverage",
+    ".jest",
+    "babel.config.js",
+    "jest.config.js",
+    "metro.config.js",
+    "index.js",
+    ".eslintrc.js"
+  ]
 }
+
