--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "start": "npx react-native start",
     "start:reset": "npx react-native start --reset-cache",
     "test": "jest",
-    "prepare": "yarn install-pods && yarn jetify",
     "install-pods": "yarn pod-install --non-interactive --quiet",
-    "postinstall": "patch-package",
+    "postinstall": "patch-package && react-native setup-ios-permissions && yarn install-pods && yarn jetify",
     "xcode": "cd ios && open bindy_street_task.xcworkspace && cd .."
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.2",
+    "@react-native-community/geolocation": "^3.0.6",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
@@ -31,8 +31,10 @@
     "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
     "react-native": "0.71.0",
+    "react-native-android-location-enabler": "^1.2.2",
     "react-native-animation-hooks": "^1.0.1",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-permissions": "3.8.0",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
@@ -60,5 +62,10 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "reactNativePermissionsIOS": [
+    "LocationAccuracy",
+    "LocationAlways",
+    "LocationWhenInUse"
+  ]
 }
